--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Game</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head profile="http://gmpg.org/xfn/11">
+    <title>ShuWei Game</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name='robots' content='noindex,nofollow' />
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <style type="text/css">
+      .recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;} 
+      h1.blogtitle a,.description { color:#444; }
+    </style>
+  </head>
+  <body class="home blog paged paged-2 asides"> 
+    <%= render 'shared/nav' %>
+    <%= yield %>
+    <%= render 'shared/mobileonfooter' %>
+    <%= render 'shared/footer' %>
+  </body>
 </html>
