--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -3,21 +3,20 @@
   <head>
     <title><%= @material.title %></title>
     <meta charset="UTF-8">
+    <%= javascript_include_tag "jquery" %>
     <%= ERB.new(@material.category.meta).result(binding).html_safe %>
     <script type="text/javascript">
       var dataForWeixin = {
-appId: "wx78f81724e6590b1d",
-       TLImg: "<%= @wx_tlimg %>",
-       url: document.location.href,
-       title: "<%= @wx_title %>",
-       desc: "<%= @wx_desc %>"
+       appId: "wx78f81724e6590b1d",
+       TLImg: "<%= @material.wx_tlimg %>",
+       url:   document.location.href,
+       title: "<%= @material.wx_title %>",
+       desc:  "<%= @material.wx_desc %>"
       };
     </script>
-    <%= javascript_include_tag "jquery" %>
     <script type="text/javascript">
       <%= ERB.new(@material.category.js).result(binding).html_safe %>
     </script>
-    <%= javascript_include_tag "wx_share" %>
     <style type="text/css">
       <%= ERB.new(@material.category.css).result(binding).html_safe %>
     </style>
