--- a/app/views/materials/return.html.erb
+++ b/app/views/materials/return.html.erb
@@ -3,23 +3,22 @@
   <head>
     <title><%= @material.title %></title>
     <%= javascript_include_tag "jquery" %>
-
     <script type="text/javascript">
       var dataForWeixin = {
-       appId: 'wx78f81724e6590b1d',
-       TLImg: "<%= @wx_tlimg %>",
-       url:   "<%= @wx_url %>",
-       title: "<%= @wx_title %>",
-       desc:  "<%= @wx_desc %>"
+        appId: "wx78f81724e6590b1d",
+        TLImg: "<%= @wx_tlimg %>",
+        url:   "<%= @wx_url %>",
+        title: "<%= @wx_title %>",
+        desc:  "<%= @wx_desc %>"
       };
-</script>
-<script type="text/javascript">
-  <%= ERB.new(@category.js).result(binding).html_safe %>
-  </script>
-  <%= javascript_include_tag "rewx_share" %>
-  <style type="text/css">
-    <%= ERB.new(@category.css).result(binding).html_safe %>
-  </style>
-</head>
-<%= ERB.new(@category.html).result(binding).html_safe %>
-  </html>
+    </script>
+    <script type="text/javascript">
+      <%= ERB.new(@category.js).result(binding).html_safe %>
+    </script>
+    <%= javascript_include_tag "rewx_share" %>
+    <style type="text/css">
+      <%= ERB.new(@category.css).result(binding).html_safe %>
+    </style>
+  </head>
+  <%= ERB.new(@category.html).result(binding).html_safe %>
+</html>
