--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,13 +3,13 @@
     <div class="menu-header"> 
       <ul id="menu-test" class="menu"> 
         <li id="menu-item-11986" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-11986"> 
-          <%= link_to 'Home', '/' %>
+          <%= link_to '首页', '/' %>
         </li>
-        <li id="menu-item-11987" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-11987"> 
-          <%= link_to 'Materials', '#' %>
+        <li id="menu-item-11987" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-11987" style="float:right;"> 
+          <%= link_to '注册', '#' %>
         </li>
       </ul> 
     </div>			
-  </div><!--  #access -->	
+  </div>
   <div class="clear"></div>
 </div>
