--- a/app/views/shared/_mobileonfooter.html.erb
+++ b/app/views/shared/_mobileonfooter.html.erb
@@ -2,10 +2,13 @@
 <div id="accessmobile" class="mobileonfooter">
   <div class="menu-header"> 
     <ul id="menu-test-1" class="menu"> 
-      <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-home menu-item-11986"> 
-      <%= link_to 'Home', '#' %>
+      <li class="menu-item menu-item-type-custom menu-item-object-custom <%= request.path == "/" &&  'current-menu-item' %> menu-item-home menu-item-11986"> 
+        <%= link_to '首页', '/' %>
       <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-11987"> 
-      <%= link_to 'Materials', '#' %>
+        <%= link_to '登陆', '#' %>
+      </li>
+      <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-11987"> 
+        <%= link_to '注册', '#' %>
       </li>
     </ul> 
   </div>			
