--- a/app/views/admin/images/_form.html.erb
+++ b/app/views/admin/images/_form.html.erb
@@ -16,6 +16,7 @@
     </div>
   <% end %>
   <%= f.hidden_field :material_id %>
+  <%= f.hidden_field :state %>
   <div class="control-group">
     <label class="control-label" style="width:100px"><strong>title:</strong></label>
     <div class="controls" style="margin:0 30px 0 110px">
