--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,6 +8,9 @@
         <li id="menu-item-11987" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-11987" style="float:right;"> 
           <%= link_to '注册', '#' %>
         </li>
+        <li id="menu-item-11987" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-11987" style="float:right;"> 
+          <%= link_to '登陆', '#' %>
+        </li>
       </ul> 
     </div>			
   </div>
