--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -16,9 +16,10 @@
     </div>
   </div>
   <% if action_name == 'edit' %>
+    <h4 style="margin-left:100px">答案</h4>
+    <hr/ style="margin-top:0px">
     <% answers = @material.answers %>
     <div class="control-group">
-      <label class="control-label">答案</label>
       <div class="controls" style="padding-top:6px">
         <% answers.each do |asw| %>
           <%= link_to [:edit,:admin,asw], class: :edit_obj do %>
@@ -34,11 +35,14 @@
     </div>
   <% end %>
   <% if action_name == 'edit' %>
+    <h4 style="margin-left:100px">图片</h4>
+    <hr/ style="margin-top:0px">
     <% images = @material.images %>
     <div class="control-group">
-      <label class="control-label">图片</label>
+      <label class="control-label">Html</label>
       <div class="controls" style="padding-top:4px">
-        <% images.each do |img| %>
+        <% imgs = images.select{ |img| img.state == 1 } %>
+        <% imgs.each do |img| %>
           <%= link_to [:edit,:admin,img], class: :edit_obj do %>
             <span class="label label-important"><%= img.title %></span>
           <% end %>
@@ -47,7 +51,42 @@
             x&nbsp;
           <% end %>
         <% end %>
-        <%= link_to '添加', [:new,:admin,@material,:image], id: :add_obj, class: "btn btn-mini btn-success", remote: true %>
+        <%= link_to '添加', new_admin_material_image_path(@material, state:1), id: :add_obj,  
+          class: "btn btn-mini btn-success", remote: true %>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label">Css</label>
+      <div class="controls" style="padding-top:4px">
+        <% imgs = images.select{ |img| img.state == 2 } %>
+        <% imgs.each do |img| %>
+          <%= link_to [:edit,:admin,img], class: :edit_obj do %>
+            <span class="label label-important"><%= img.title %></span>
+          <% end %>
+          <%= link_to [:admin,img], method: :delete,  
+            class: :ajaxDel, data: {confirm: "Are you sure?"} ,remote: true  do %>
+            x&nbsp;
+          <% end %>
+        <% end %>
+        <%= link_to '添加', new_admin_material_image_path(@material, state:2), id: :add_obj,
+          class: "btn btn-mini btn-success", remote: true %>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label">Js</label>
+      <div class="controls" style="padding-top:4px">
+        <% imgs = images.select{ |img| img.state == 3 } %>
+        <% imgs.each do |img| %>
+          <%= link_to [:edit,:admin,img], class: :edit_obj do %>
+            <span class="label label-important"><%= img.title %></span>
+          <% end %>
+          <%= link_to [:admin,img], method: :delete,  
+            class: :ajaxDel, data: {confirm: "Are you sure?"} ,remote: true  do %>
+            x&nbsp;
+          <% end %>
+        <% end %>
+        <%= link_to '添加', new_admin_material_image_path(@material, state:3), id: :add_obj,
+          class: "btn btn-mini btn-success", remote: true %>
       </div>
     </div>
   <% end %>
