--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
       </div>
       <div id="post-11945" class="post-11945 post type-post status-publish format-standard hentry category-asides posthome author-admin1310 asides">
         <div class="">
-          <%= link_to '#' do %>
+          <%= link_to material do %>
             <%= image_tag material.wx_tlimg, style: "width:238px; height:285px;" %>
           <% end %>
         </div>
