--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <% @materials.each_with_index do |material, index| %>
     <div class="grid_4 alpha1 omega<%= index+1 %>">
       <div class="home blog paged paged-2 cat-links asides" style="height:48px;overflow:hidden;">
-        <%= link_to material.title, '#', title: 'asides' %>
+        <%= link_to material.name, '#', title: 'asides' %>
       </div>
       <div id="post-11945" class="post-11945 post type-post status-publish format-standard hentry category-asides posthome author-admin1310 asides">
         <div class="">
@@ -15,7 +15,7 @@
             <a href="#" title="Link to Third post" rel="bookmark">Third post</a> 
           </h2> --!>
           <div class="entry-content-home">
-            <%= material.wx_desc %>
+            <%= material.wxdesc %>
           </div>
         </div>
       </div>
