--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -1,14 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= @material.title %></title>
-    <%= ERB.new(@material.category.meta).result(binding).html_safe %>
-    <script type="text/javascript">
-      <%= ERB.new(@material.category.js).result(binding).html_safe %>
-    </script>
-    <style type="text/css"> 
-      <%= ERB.new(@material.category.css).result(binding).html_safe %>
-    </style>
-  </head>
-<%= ERB.new(@material.category.html).result(binding).html_safe %>
+  <%# cache @material do %>
+    <head>
+      <% @category = @material.category %>
+      <title><%= @material.name %></title>
+      <% @answers = @material.answers %>
+      <meta charset="utf-8">
+      <%= ERB.new(@category.meta).result(binding).html_safe %>
+      <%#= javascript_include_tag "jquery" %>
+      <script type="text/javascript">
+        <% @wx_appid = @material.wx_appid %>
+        <% @wx_url   = @material.wx_url %>
+        <% @wx_title = @material.wx_title %>
+        <% @wx_desc  = @material.wxdesc %>
+        <% @wx_tlimg = @material.wx_tlimg %>
+        <%= ERB.new(@category.js).result(binding).html_safe %>
+      </script>
+      <style type="text/css">
+        <% @css_image   = @material.images.select{|i| i.state == 1 }[0].try(:body) %>
+        <% @css_image_2 = @material.images.select{|i| i.state == 10}[0].try(:body) %>
+        <% @css_image_3 = @material.images.select{|i| i.state == 11}[0].try(:body) %>
+        <% @css_image_4 = @material.images.select{|i| i.state == 12}[0].try(:body) %>
+        <%= ERB.new(@category.css).result(binding).html_safe %>
+      </style>
+    </head>
+    <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
+    <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
+    <% @close_btn    = @material.images.select{|i| i.state == 16}[0].try(:body) %>
+    <% @html_image   = @material.images.select{|i| i.state == 2 }[0].try(:body) %>
+    <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
+    <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
+    <%= ERB.new(@category.html).result(binding).html_safe %>
+  <%# end  %>
 </html>
