--- a/app/views/admin/materials/index.html.erb
+++ b/app/views/admin/materials/index.html.erb
@@ -2,6 +2,7 @@
     <thead>
       <tr class="well">
         <th>名称</th>
+        <th width="9%">分类</th>
         <th width="17%">创建时间</th>
         <th width="13%">操作</th>
       </tr>
@@ -10,6 +11,7 @@
       <% @materials.each do |c| %>
         <tr>
           <td><%= c.name %></td>
+          <td><%= c.category.try(:name) %></td>
           <td><%= c.created_at.to_local %></td>
           <td> 
             <%= link_to '编辑', [:edit,:admin,c] %> |
