--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <div id="blog-title" class="blogtitle"> 
             <%= link_to '玩会儿', '/' %>
           </div>
-          <div class="description">Just another WordPress site </div>
+          <!--<div class="description">Just another WordPress site </div> --!>
         </div>
       </div>
     </div>
@@ -35,14 +35,14 @@
       <div id="primary" class="sidebar alpha grid_5 pull_10">
         <ul class="">
           <li id="search-3" class="widget widget_search"><div class="widgetblock">
-            <div class="widgettitleb"><h3 class="widgettitle">游戏搜索</h3></div>
+            <!--<div class="widgettitleb"><h3 class="widgettitle">游戏搜索</h3></div>
             <form role="search" action="/" class="search-form" >
               <label>
                 <span class="screen-reader-text">Search for:</span>
                 <input type="search" name="q" class="search-field", placeholder="搜索 ..."/>
               </label>
               <input type="submit" class="search-submit", value="搜索"/>
-            </form>
+            </form> --!>
           </li>
           <div class="widgetblock"> 
             <div class="widgettitleb"> 
@@ -67,7 +67,7 @@
               <ul>
                 <li>
                   <%= link_to '#' do %>
-                    最新游戏《马上……》火爆登场, 诸位请锁定昨天早上1点 !
+                    最新游戏《马上……》火爆登场, 诸位请锁定明天早上 !
                   <% end %>
                 </li>
               </ul>
@@ -76,7 +76,7 @@
         </ul>
       </div>
     </div>
-    <%= render 'shared/mobileonfooter' %>
+    <%#= render 'shared/mobileonfooter' %>
     <%= render 'shared/footer' %>
   </body>
 </html>
