--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -10,6 +10,12 @@
     </div>
   </div>
   <div class="control-group">
+    <label class="control-label">描述介绍:</label>
+    <div class="controls">
+      <%= f.text_area :description, style:"width:800px;height:100px" %>
+    </div>
+  </div>
+  <div class="control-group">
     <label class="control-label">类别选择</label>
     <div class="controls">
       <%= f.select :category_id, ::Category.all.collect {|p| [ p.name, p.id ] } %>
