--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -2,6 +2,7 @@
 <html>
   <% cache @material, skip_digest: true do %>
     <head>
+      <%= favicon_link_tag 'shangjieba-icon.png' %> 
       <% @category = @material.category %>
       <title><%= @material.name %></title>
       <% @answers = @material.answers %>
@@ -15,27 +16,27 @@
         <% @wx_desc  = @material.wxdesc %>
         <% @wx_tlimg = @material.wx_tlimg %>
         <%= ERB.new(@category.js).result(binding).html_safe %>
-        </script>
-        <style type="text/css">
-          <% @css_image   = @material.images.select{|i| i.state == 1 }[0].try(:body) %>
-          <% @css_image_2 = @material.images.select{|i| i.state == 10}[0].try(:body) %>
-          <% @css_image_3 = @material.images.select{|i| i.state == 11}[0].try(:body) %>
-          <% @css_image_4 = @material.images.select{|i| i.state == 12}[0].try(:body) %>
-          <%= ERB.new(@category.css).result(binding).html_safe %>
-        </style>
-      </head>
-      <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
-      <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
-      <% @close_btn    = @material.images.select{|i| i.state == 16}[0].try(:body) %>
-      <% @html_image   = @material.images.select{|i| i.state == 2 }[0].try(:body) %>
-      <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
-      <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
-      <%= ERB.new(@category.html).result(binding).html_safe %>
-      <div style="display: none;">
-        <script src="http://s5.cnzz.com/stat.php?id=2814783&web_id=2814783" language="JavaScript"></script>
-      </div>
-       <script type="text/javascript"> 
-         $('a').last().hide();
       </script>
-    <% end %>
-  </html>
+      <style type="text/css">
+        <% @css_image   = @material.images.select{|i| i.state == 1 }[0].try(:body) %>
+        <% @css_image_2 = @material.images.select{|i| i.state == 10}[0].try(:body) %>
+        <% @css_image_3 = @material.images.select{|i| i.state == 11}[0].try(:body) %>
+        <% @css_image_4 = @material.images.select{|i| i.state == 12}[0].try(:body) %>
+        <%= ERB.new(@category.css).result(binding).html_safe %>
+      </style>
+    </head>
+    <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
+    <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
+    <% @close_btn    = @material.images.select{|i| i.state == 16}[0].try(:body) %>
+    <% @html_image   = @material.images.select{|i| i.state == 2 }[0].try(:body) %>
+    <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
+    <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
+    <%= ERB.new(@category.html).result(binding).html_safe %>
+    <div style="display: none;">
+      <script src="http://s5.cnzz.com/stat.php?id=2814783&web_id=2814783" language="JavaScript"></script>
+    </div>
+    <script type="text/javascript"> 
+      $('a').last().hide();
+    </script>
+  <% end %>
+</html>
