iprove wanhuir homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>玩会儿</title>
+    <title>玩会儿 - 微信游戏 </title>
     <%= favicon_link_tag 'shangjieba-icon.png' %>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -47,13 +47,13 @@
           <div class="widgetblock"> 
             <div class="widgettitleb"> 
               <h3 class="widgettitle">
-                My Instagrams 
+                让你的新春祝福挂出来！ 超级火爆 
               </h3> 
             </div>
             <ul class="wpinstagram wpinstagram-slideshow live" style="width: 300px; height: 300px;">
               <li style="width: 300px; height: 300px; margin-bottom: 5px !important;">
-                <%= link_to "javascript:;" do %>
-                  <%= image_tag "layout.jpg", style:"width:300px; height:300px; margin-bottom:5px;" %>
+                <%= link_to "http://m.shangjieba.com/games/info/zhufu_r?fr=whr" do %>
+                  <%= image_tag "http://zhufu.qiniudn.com/front-board1.png", style:"width:300px; height:300px; margin-bottom:5px;" %>
                 <% end %>
               </li>
             </ul>
@@ -66,8 +66,8 @@
               </div>
               <ul>
                 <li>
-                  <%= link_to '#' do %>
-                    最新游戏《马上……》火爆登场, 诸位请锁定明天早上 !
+                  <%= link_to 'http://www.shangjieba.com' do %>
+                    上街吧3.0, android和ios隆重登场, 全新改版, 推出搭配DIY和时尚圈，让你马上爽起来 !
                   <% end %>
                 </li>
               </ul>
