--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="clear"></div>
 <div class="credits container_15 entry-content-footer"> 
-  Shuwei Inc.   　 沪ICP备09039856号-2
+  Shuwei Inc. 2013 All Rights Reserved. 沪ICP备09039856号-2
 </div> 
