--- a/app/views/admin/materials/index.html.erb
+++ b/app/views/admin/materials/index.html.erb
@@ -11,7 +11,11 @@
     <body>
       <% @materials.each do |c| %>
         <tr>
-          <td><%= c.name %></td>
+          <td> 
+            <%= link_to c do %>
+              <%= c.name %>
+            <% end %>
+          </td>
           <td> 
             <%= link_to [:update_state,:admin,c], remote: true, class: 'ajax',  
               data: {confirm: 'are you sure?'} do %>
