--- a/app/views/admin/materials/index.html.erb
+++ b/app/views/admin/materials/index.html.erb
@@ -1,36 +1,36 @@
-  <table class="table table-bordered">  
-    <thead>
-      <tr class="well">
-        <th>名称</th>
-        <th width="5%">状态</th>
-        <th width="9%">分类</th>
-        <th width="17%">创建时间</th>
-        <th width="13%">操作</th>
+<table class="table table-bordered">  
+  <thead>
+    <tr class="well">
+      <th>名称</th>
+      <th width="5%">状态</th>
+      <th width="9%">分类</th>
+      <th width="17%">创建时间</th>
+      <th width="13%">操作</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @materials.each do |c| %>
+      <tr>
+        <td> 
+          <%= link_to c do %>
+            <%= c.name %>
+          <% end %>
+        </td>
+        <td> 
+          <%= link_to [:update_state,:admin,c], remote: true, class: 'ajax',  
+            data: {confirm: 'are you sure?'} do %>
+            <span class="label"><%= c.cn_state %></span> 
+          <% end %>
+        </td>
+        <td><%= c.category.try(:name) %></td>
+        <td><%= c.created_at.to_local %></td>
+        <td> 
+          <%= link_to '编辑', [:edit,:admin,c] %> |
+          <%= link_to '克隆', [:clone,:admin,c], data: {confirm: "Are you clone one !"} %> |
+          <%= link_to '删除', [:admin,c], method: :delete, class: "delMaterial", remote: true, data: {confirm: "Are you sure?"} %>
+        </td>
       </tr>
-    </thead>
-    <body>
-      <% @materials.each do |c| %>
-        <tr>
-          <td> 
-            <%= link_to c do %>
-              <%= c.name %>
-            <% end %>
-          </td>
-          <td> 
-            <%= link_to [:update_state,:admin,c], remote: true, class: 'ajax',  
-              data: {confirm: 'are you sure?'} do %>
-              <span class="label"><%= c.cn_state %></span> 
-            <% end %>
-          </td>
-          <td><%= c.category.try(:name) %></td>
-          <td><%= c.created_at.to_local %></td>
-          <td> 
-            <%= link_to '编辑', [:edit,:admin,c] %> |
-            <%= link_to '克隆', [:clone,:admin,c], data: {confirm: "Are you clone one !"} %> |
-            <%= link_to '删除', [:admin,c], method: :delete, class: "delMaterial", 
-            remote: true, data: {confirm: "Are you sure?"} %>
-          </td>
-        </tr>
-      <% end %>
-    </body>
-  </table>
+    <% end %>
+  </tbody>
+</table>
+<%= paginate @materials %>
