--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,13 +47,13 @@
           <div class="widgetblock"> 
             <div class="widgettitleb"> 
               <h3 class="widgettitle">
-                让你的新春祝福挂出来！ 超级火爆 
+                【测试】你在唐朝长啥样？上街吧
               </h3> 
             </div>
             <ul class="wpinstagram wpinstagram-slideshow live" style="width: 300px; height: 300px;">
               <li style="width: 300px; height: 300px; margin-bottom: 5px !important;">
-                <%= link_to "http://m.shangjieba.com/games/info/zhufu_r?fr=whr" do %>
-                  <%= image_tag "http://zhufu.qiniudn.com/front-board1.png", style:"width:300px; height:300px; margin-bottom:5px;" %>
+                <%= link_to "http://m.shangjieba.com/games/info/tc_r?fr=whr" do %>
+                  <%= image_tag "http://mashang.qiniudn.com/tc.jpg", style:"width:300px; height:300px; margin-bottom:5px;" %>
                 <% end %>
               </li>
             </ul>
@@ -66,7 +66,7 @@
               </div>
               <ul>
                 <li>
-                  <%= link_to 'http://www.shangjieba.com' do %>
+                  <%= link_to 'http://www.shangjieba.com?fr=wan' do %>
                     上街吧3.0, android和ios隆重登场, 全新改版, 推出搭配DIY和时尚圈，让你马上爽起来 !
                   <% end %>
                 </li>
