--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>玩会儿 - 微信游戏 </title>
+    <title>玩会儿 - 微信测试 微信游戏 微信刮刮卡 </title>
     <%= favicon_link_tag 'shangjieba-icon.png' %>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name='robots' content='noindex,nofollow' />
+    <meta name="keywords" content="玩会儿,微信测试,微信游戏,微测试,微游戏,小游戏,名字,唐朝,刮刮卡,转盘">
+    <meta name="description" content="玩会儿,微信游戏,微信测试"> 
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
