add baidu light app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="keywords" content="玩会儿,微信测试,微信游戏,微测试,微游戏,小游戏,名字,唐朝,刮刮卡,转盘">
     <meta name="description" content="玩会儿,微信游戏,微信测试"> 
+    <meta name="baidu-tc-cerfication" content="172a854e4a368f1373c63b8533a823c9" />
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
