--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,13 +7,10 @@
       <div id="post-11945" class="post-11945 post type-post status-publish format-standard hentry category-asides posthome author-admin1310 asides">
         <div class="">
           <%= link_to material do %>
-            <%= image_tag material.wx_tlimg, style: "width:238px; height:285px;" %>
+            <%= image_tag material.wx_tlimg, style: "width:100%;" %>
           <% end %>
         </div>
         <div class="posthometext">
-          <!--<h2 class="entry-title"> 
-            <a href="#" title="Link to Third post" rel="bookmark">Third post</a> 
-          </h2> --!>
           <div class="entry-content-home">
             <%= material.wxdesc %>
           </div>
