--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,6 @@
           <div id="blog-title" class="blogtitle"> 
             <%= link_to '玩会儿', '/' %>
           </div>
-          <!--<div class="description">Just another WordPress site </div> --!>
         </div>
       </div>
     </div>
@@ -37,14 +36,6 @@
       <div id="primary" class="sidebar alpha grid_5 pull_10">
         <ul class="">
           <li id="search-3" class="widget widget_search"><div class="widgetblock">
-            <!--<div class="widgettitleb"><h3 class="widgettitle">游戏搜索</h3></div>
-            <form role="search" action="/" class="search-form" >
-              <label>
-                <span class="screen-reader-text">Search for:</span>
-                <input type="search" name="q" class="search-field", placeholder="搜索 ..."/>
-              </label>
-              <input type="submit" class="search-submit", value="搜索"/>
-            </form> --!>
           </li>
           <div class="widgetblock"> 
             <div class="widgettitleb"> 
@@ -52,10 +43,10 @@
                 【测试】你在唐朝长啥样？上街吧
               </h3> 
             </div>
-            <ul class="wpinstagram wpinstagram-slideshow live" style="width: 300px; height: 300px;">
-              <li style="width: 300px; height: 300px; margin-bottom: 5px !important;">
+            <ul class="wpinstagram wpinstagram-slideshow live" style="width: 100%;">
+              <li style="width:100%; margin-bottom: 5px !important;">
                 <%= link_to "http://m.shangjieba.com/games/info/tc_r?fr=whr" do %>
-                  <%= image_tag "http://mashang.qiniudn.com/tc.jpg", style:"width:300px; height:300px; margin-bottom:5px;" %>
+                  <%= image_tag "http://mashang.qiniudn.com/tc.jpg", style:"width:100%; margin-bottom:5px;" %>
                 <% end %>
               </li>
             </ul>
@@ -69,7 +60,7 @@
               <ul>
                 <li>
                   <%= link_to 'http://www.shangjieba.com?fr=wan' do %>
-                    上街吧3.0, android和ios隆重登场, 全新改版, 推出搭配DIY和时尚圈，让你马上爽起来 !
+                    下载上街吧,创建自己的时尚搭配杂志!
                   <% end %>
                 </li>
               </ul>
