--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,24 +7,11 @@
       <div id="post-11945" class="post-11945 post type-post status-publish format-standard hentry category-asides posthome author-admin1310 asides">
         <div class="">
           <%= link_to material do %>
-            <%= image_tag material.wx_tlimg, style: "width:100%; height:265px;" %>
+            <%= image_tag material.wx_tlimg, style: "width:100%; height:265px; margin-bottom:0px;" %>
           <% end %>
-        </div>
-        <div class="posthometext">
-          <div class="entry-content-home">
-            <%= material.wxdesc %>
-          </div>
         </div>
       </div>
     </div>
   <% end %>
   <div class="clear"></div>				
-  <div class="center">
-    <!-- <div class="navigation mobileoff"> 
-      <p><a href="#" >&laquo; Previous Page</a></p> 
-    </div>
-    <div class="navigation_mobile"> 
-      <p><a href="#" >&laquo; Previous Page</a> </p> 
-    </div> --!>
-  </div>
 </div>
