--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,10 +14,10 @@
     </div>
   <% end %>
   <div class="clear"></div>				
-  <% unless @materials.size = 9 %>
+  <% unless @materials.size <= @materials.total_count %>
     <div style="background: #444;">
       <div style="margin: 0 auto 0 auto; width:63px; padding: 6px; text-align: center;">
-        <%= link_to "点击加载", materials_url(page: 2), style: "color: white;" %>
+        <%= link_to "点击加载", materials_url(length: 9), style: "color: white;" %>
       </div>
     </div>
   <% end %>
