--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
     </div>
   <% end %>
   <div class="clear"></div>				
-  <% unless @materials.size <= @materials.total_count %>
+  <% if @materials.size < @materials.total_count %>
     <div style="background: #444;">
       <div style="margin: 0 auto 0 auto; width:63px; padding: 6px; text-align: center;">
         <%= link_to "点击加载", materials_url(length: 9), style: "color: white;" %>
